# VE

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  VE.sln  VEmain.cpp  gitignore
Assests/: SkyBox.ps  shader.vs  shader1.fs
Assets/: SkyBox.vs
Engine/inc/: All.hpp  Prerequisites.hpp
Engine/inc/Entity/: CameraComponent.hpp  Component.hpp  Entity.hpp  LightComponent.hpp  MeshComponent.hpp  TerrainComponent.hpp  TransformComponent.hpp
Engine/inc/Game/: Display.hpp  Game.hpp  World.hpp
Engine/inc/Graphics/: DeviceContext.hpp  GraphicsEngine.hpp  IndexBuffer.hpp  PixelShader.hpp  RenderSystem.hpp  SwapChain.hpp  Texture2D.hpp  UniformBuffer.hpp  VertexBuffer.hpp  VertexShader.hpp
Engine/inc/Input/: InputSystem.hpp
Engine/inc/Math/: Matrix4x4.hpp  Rect.hpp  Vector2D.hpp  Vector3D.hpp  Vector4D.hpp  VertexMesh.hpp
Engine/inc/Resource/: Material.hpp  Mesh.hpp  Resource.hpp  ResourceManager.hpp  Texture.hpp
Engine/inc/Window/: Window.hpp
Engine/src/Entity/: CameraComponent.cpp  Component.cpp  Entity.cpp  LightComponent.cpp  MeshComponent.cpp  TerrainComponent.cpp  TransformComponent.cpp
Engine/src/Game/: Display.cpp  Game.cpp  SDL_Game.cpp  World.cpp
Engine/src/Graphics/: DeviceContext.cpp  GraphicsEngine.cpp  IndexBuffer.cpp  PixelShader.cpp  RenderSystem.cpp  SwapChain.cpp  Texture2D.cpp  UniformBuffer.cpp  VertexBuffer.cpp  VertexShader.cpp
Engine/src/Input/: InputSystem.cpp
Engine/src/Resource/: Material.cpp  Mesh.cpp  Resource.cpp  ResourceManager.cpp  Texture.cpp
Engine/src/Window/: Window.cpp
Game/: MyGame.cpp  MyGame.hpp  Player.cpp  Player.hpp  WinMain.cpp
Shaders/: shader.vs  shader1.vs
VE/: CMakeLists.txt  CMakePresets.json  Source.cpp  VE.vcxproj  VE.vcxproj.filters  VEmain.cpp
VE/Engine/: req.h
VE/Engine/Graphics/: VGraphics.cpp  VGraphics.hpp
VE/Engine/ResourceChief/: VResourceChief.cpp  VResourceChief.hpp
VE/Engine/VInput/: VInput.cpp  VInput.h
VE/Engine/Window/: VWindow.cpp  VWindow.h  VWindow.hpp
VE/Extensions/: CMakeLists.txt
VE/Extensions/Defualt/: CMakeLists.txt
VE/Extensions/Defualt/VDebug/: VDebug.h
VE/Extensions/Defualt/VGraphics/: CMakeLists.txt  VGraphics.cpp  VGraphics.hpp  VGraphicsResourceChief.cpp  VGraphicsResourceChief.hpp  req.h  requirements.c
VE/Extensions/Defualt/VGraphics/DX/11/: DX11.cpp  private.cpp  public.c
VE/Extensions/Defualt/VGraphics/DX/11/Shaders/: VSDefault.hlsl
VE/Extensions/Defualt/VGraphics/MSGraphicsManager/: MSDX11.cpp  MSDX11.hpp  MSDX11User.cpp  MSDX11User.hpp  private.h
VE/Extensions/Defualt/VGraphics/Shaders/: PSDefault.hlsl  VSDefault.hlsl
VE/Extensions/Defualt/VInput/: CMakeLists.txt  VInput.cpp  VInput.h
VE/Extensions/Defualt/VMath/: CMakeLists.txt  VMath.h  Vmat4x4  Vvec3  Vvertex
VE/Extensions/Defualt/VResourceChief/: CMakeLists.txt  VResourceChief.cpp  VResourceChief.hpp
VE/Extensions/Defualt/VResourceChief/MSResourceManager/: MSResUser.cpp  MSResUser.h
VE/Extensions/Defualt/VWindow/: CMakeLists.txt  VWindow.cpp  VWindow.hpp
VE/Extensions/Defualt/VWindow/MS/: Window.cpp  private.cpp  public.c
VE/Extensions/Defualt/VWindow/MSWindowManager/: MSWinUser.cpp  MSWinUser.h
VE/Games/Game0/: VGame0.cpp
VE/Games/Game0/G/: Entity.cpp  Entity.h  VGame0.cpp  VGame0.h
VE/Games/Game0/G/Entity/: EEntity.cpp  EEntity.h  ESqr.cpp  ESqr.h
VE/Games/Game0/Resources/: PixelShader.hlsl  VertexShader.hlsl
VE/Games/Game0/Shaders/: VertexShader.hlsl
VE/Libs/: CMakeLists.txt  LibsList.h  preprocessing.h
VE/Libs/DefualtLibs/: DefualtLibsList.h
VE/Libs/DefualtLibs/MSGraphicsManager/: GraphicsEngine_Base.h  MSDX11User.cpp  MSDX11User.h  MSDX11User.hpp  req.h
VE/Libs/DefualtLibs/MSResourceManager/: MSResUser.cpp  MSResUser.h
VE/Libs/DefualtLibs/MSWindowManager/: MSWinUser.cpp  MSWinUser.h  WinUser.cpp  WinUser.h
VE/Libs/DefualtLibs/VDebug/: VDebug.h
inc/: Prerequisities.h
inc/Debug/: Console.h
inc/Graphics/: Defines.h  Graphics.hpp  IndexBuffer.hpp  Pipeline.hpp  PixelShader.hpp  RenderSystem.hpp  Texture2D.hpp  UniformBuffer.hpp  VertexBuffer.hpp  VertexShader.hpp
inc/Input/: Input.h
inc/Window/: Window.hpp
src/: main.cpp
src/Graphics/: Graphics.cpp  IndexBuffer.cpp  Pipeline.cpp  PixelShader.cpp  RenderSystem.cpp  Texture2D.cpp  UniformBuffer.cpp  VertexBuffer.cpp  VertexShader.cpp
src/Input/: Input.cpp
src/Window/: Window.cpp
